Begin to migrate to java11